@@ -20,11 +20,10 @@ our @ISA     = 'SDL::Tutorial::3DWorld::Actor';
 # Constructor and Accessors
 
 sub new {
-	my $class = shift;
-	my $self  = bless {
+	my $self = shift->SUPER::new(
 		blending => 1,
 		@_,
-	}, $class;
+	);
 
 	# Convert the texture to a full material
 	$self->{material} = SDL::Tutorial::3DWorld::Material->new(
